fixed whitespace weirdness, added start tab apps tooltip styling for new KDTooltip

--- a/client/Framework/themes/default/kd.tooltip.styl
+++ b/client/Framework/themes/default/kd.tooltip.styl
@@ -118,7 +118,7 @@ div.kdtooltip
       border                  1px solid rgba(0,0,0,0.85)
       color                   white
 
-      white-space             pre-wrap
+      white-space             normal
       text-align              center
 
       font-size               12px
